@@ -27,7 +27,7 @@
 #include "orbsvcs/ETCL/ETCL_Constraint.h"
 #include "orbsvcs/CosNotificationC.h"
 
-#include "tao/Typecode.h"
+#include "tao/TypeCode.h"
 
 #include "notify_serv_export.h"
 
