@@ -1,3 +1,10 @@
+Tue Jul  5 07:48:44 2005  Justin Michel  <michel_j@ociweb.com>
+
+        * examples/Kokyu_dsrt_schedulers/EDF_SchedulingC.cpp:
+        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.h:
+
+          Fix case of include for tao/TypeCode.h
+
 Tue Jul  5 07:41:12 2005  Justin Michel  <michel_j@ociweb.com>
 
         * orbsvcs/tests/Notify/Basic/AdminProperties.cpp:
@@ -23,7 +30,7 @@ Tue Jul  5 07:41:12 2005  Justin Michel  <michel_j@ociweb.com>
         * orbsvcs/tests/Notify/performance-tests/Filter/Sequence_Supplier.cpp:
 
           Fix misc problems with use of ACE_ENV macros.
-	  Add missing go.idl files
+          Add missing go.idl files
 
 Tue Jul  5 03:07:52 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
